deploy/4_ingress/0_longhorn/1_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "longhorn-auth"
    nginx.ingress.kubernetes.io/enable-access-log: "false"
spec:
  tls:
    - hosts:
        - longhorn.hoshi-note.ixk.me
      secretName: longhorn-hoshi-note-tls
  rules:
    - host: longhorn.hoshi-note.ixk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
